--- a/index.css
+++ b/index.css
@@ -5,13 +5,6 @@ body {
     background-color: #f4f4f4;
 }
 
-header {
-    background: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-
 /* Navigation Bar */
 header {
     background-color: #003366;
@@ -45,6 +38,16 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
+/* Remove bullets from list inside modal */
+.modal-content ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.modal-content ul li {
+    margin-top: 5px;
+}
 
 .car-grid {
     display: grid;
@@ -62,8 +65,9 @@ nav ul li a:hover {
 }
 
 .car img {
-    max-width: 100%;
-    height: auto;
+    max-width: 60%;
+    height: 180px;
+    object-fit: cover;
     border-radius: 5px;
 }
 
@@ -75,7 +79,7 @@ button {
     background: #007bff;
     color: white;
     border: none;
-    padding: 10px 15px;
+    padding: 10px 10px;
     cursor: pointer;
     border-radius: 5px;
 }
@@ -91,39 +95,73 @@ button:hover {
     z-index: 1000;
     left: 0;
     top: 0;
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 80%;
 }
+
 .modal-content {
-    background: white;
-    margin: 15% auto;
+    background: rgb(217, 235, 213);
+    margin: 10% auto;
     padding: 20px;
     width: 50%;
-    border-radius: 5px;
+    border-radius: 8px;
     text-align: center;
 }
 
 .modal-content img {
-    max-width: 100%;
-    height: fixed;
+    max-width: 90%;
     border-radius: 5px;
 }
 
 .close {
-    color: red;
+    color: rgb(207, 205, 230);
     float: right;
     font-size: 28px;
     cursor: pointer;
 }
 
 .close:hover {
-    color: darkred;
+    color: rgb(219, 100, 100);
 }
-.modal-content ul {
-    list-style-type: none; /* Removes bullets */
-    padding-left: 0; /* Removes default padding */
-    margin-left: 0; /* Removes any margin */
+
+.randomImage {
+    width: 200px; /* Adjust size */
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    transition: opacity 1s ease-in-out;
 }
-.modal-content ul li {
-    margin-top: 5px; /* Adds space between list items */
+.slider-container {
+    width: 100%; /* Adjust size */
+    height: 500px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Slider */
+.slider {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+/* Images inside slider */
+.slider img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-color:white;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+/* Ensure the first image is visible initially */
+.slider img:first-child {
+    opacity: 1;
 }
